--- a/index.html
+++ b/index.html
@@ -16,46 +16,45 @@
   <link rel="stylesheet" href="./styles/dark.css" />
   <link rel="stylesheet" href="./styles/light.css" />
 </head>
-
 <body class="page">
-<header class="header decorated-zone">
-  <span class="header_rec" aria-hidden="true">rec</span>
-  <nav class="header__theme-menu">
-    <ul class="header__theme-menu-list">
-      <li class="header__theme-menu-item">
-        <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-        >
-          День
-        </button>
-      </li>
-      <li class="header__theme-menu-item">
-        <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-        >
-          Авто
-        </button>
-      </li>
-      <li class="header__theme-menu-item">
-        <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-        >
-          Неон
-        </button>
-      </li>
-    </ul>
-  </nav>
-  <h1 class="header_title title">no focus</h1>
-  <p class="header_text title_decor">
-    Что делать, когда не&nbsp;можешь делать ничего<br />
-    Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-  </p>
-</header>
+  <header class="header decorated-zone">
+    <span class="header_rec" aria-hidden="true">rec</span>
+    <nav class="header__theme-menu">
+      <ul class="header__theme-menu-list">
+        <li class="header__theme-menu-item">
+          <button
+                  class="header__theme-menu-button header__theme-menu-button_type_light"
+          >
+            День
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button
+                  class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+                  disabled
+          >
+            Авто
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button
+                  class="header__theme-menu-button header__theme-menu-button_type_dark"
+          >
+            Неон
+          </button>
+        </li>
+      </ul>
+    </nav>
+    <h1 class="header_title title">no focus</h1>
+    <p class="header_text title_decor">
+      Что делать, когда не&nbsp;можешь делать ничего<br />
+      Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+    </p>
+  </header>
 <main class="content">
   <section class="content_section">
     <h2 class="content_title">Почему сосредоточиться так сложно</h2>
-    <article class="content_section_text">
+    <article class="content_section_text content_section_position">
       <h3 class="title_decor">Многозадачность</h3>
       <p class="content_text">
         Особенно сложно сосредоточиться, когда задач много и&nbsp;все
@@ -74,7 +73,7 @@
         устаём.
       </p>
     </article>
-    <article class="content_section_text">
+    <article class="content_section_text content_section_position">
       <h3 class="title_decor">Дофамин</h3>
       <p class="content_text">
         С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -131,10 +130,10 @@
       секунд)
     </h2>
     <div class="section_text">
-      <h3 class="title_decor">
-        5 простых (на самом деле не очень) советов
-      </h3>
       <article class="content_section_text">
+        <h3 class="title_decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
         <ul>
           <li class="section_text_advice">
             <h4 class="title_decor regular">Представьте небо и облака</h4>
